--- a/.env
+++ b/.env
@@ -72,3 +72,4 @@ database.default.port = 3306
 # TAMBAHAN VARIABEL SENDIRI
 #--------------------------------------------------------------------
 TEMA = 'CoronaDark'
+APPNAME = 'Template'
